objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADS_Current_Month__c</fullName>
        <description>Works with Average Daily Sales</description>
        <label>ADS-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Qtr__c</fullName>
        <label>ADS-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Yr__c</fullName>
        <label>ADS-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Month__c</fullName>
        <label>ADS-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Qtr__c</fullName>
        <label>ADS-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Yr__c</fullName>
        <label>ADS-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOPS_Cust_ID_Trunc__c</fullName>
        <formula>text(value(AOPS_Cust_Id__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aops Cust ID Truncated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Cust_Id_Length__c</fullName>
        <formula>if(AOPS_Cust_Id__c !=null,  LEN(AOPS_Cust_Id__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Cust Id Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOPS_Cust_Id__c</fullName>
        <description>AOPS Customer Account Number</description>
        <externalId>true</externalId>
        <label>AOPS Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOPS_Seq_ID__c</fullName>
        <externalId>true</externalId>
        <label>AOPS Seq ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOPS_Site_Length__c</fullName>
        <formula>if(AOPS_Seq_ID__c != null, LEN(Seq_ID__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Site Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Month__c</fullName>
        <label>AOV-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Qtr__c</fullName>
        <label>AOV-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Yr__c</fullName>
        <label>AOV-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Month__c</fullName>
        <label>AOV-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Qtr__c</fullName>
        <label>AOV-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Yr__c</fullName>
        <label>AOV-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Account ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <label>Account Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <label>Account Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>New Prospect Number - Auto Generated for Synygy project</description>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Owner_District__c</fullName>
        <formula>Sales_PersonID__r.User__r.District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager2__c</fullName>
        <formula>Sales_PersonID__r.User__r.Manager.Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_2__c</fullName>
        <formula>IF(contains(Sales_PersonID__r.User__r.Manager.OD_Title__c,&apos;%VP%&apos;),
Sales_PersonID__r.User__r.Market__c ,
Sales_PersonID__r.User__r.Manager.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Manager_Name__c</fullName>
        <formula>Sales_PersonID__r.User__r.Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <formula>Sales_PersonID__r.User__r.FirstName+&apos; &apos;+Sales_PersonID__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Region__c</fullName>
        <formula>Sales_PersonID__r.User__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_VP__c</fullName>
        <formula>Sales_PersonID__r.User__r.Manager.Manager.Manager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner VP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; 
&amp; Sales_PersonID__r.User__r.Id, 
Sales_PersonID__r.User__r.FirstName+&apos; &apos;+Sales_PersonID__r.User__r.LastName 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Page_Source__c</fullName>
        <description>This field would be populated by the value of LeadPageSource field of Lead object during the lead conversion process. created as part of - S-366880</description>
        <label>Account Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Operation__c</fullName>
        <label>Account Setup Operation</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Request_Status__c</fullName>
        <label>Setup Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single User</fullName>
                </value>
                <value>
                    <fullName>Multi-User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_level_email_permission_flag__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <description>Email permissions</description>
        <label>Email Permission</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Hqtrs__c</fullName>
        <label>Acct. Headquarters?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address1_DW__c</fullName>
        <description>Address1 formatted for DW</description>
        <formula>SUBSTITUTE( Address1__c , &quot;\&quot;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address1 DW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_DW__c</fullName>
        <description>Address 2 formatted for DW</description>
        <formula>SUBSTITUTE( Address2__c , &quot;\&quot;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address2 DW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Key__c</fullName>
        <label>Address Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Error__c</fullName>
        <label>Address Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Address1__c &amp; Case(City__c, null,&quot; &quot;,&quot;,&quot;) &amp; City__c &amp; Case(Text(State__c), null,&quot; &quot;,&quot;,&quot;) &amp; Text(State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address - Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adj_Incr_Potential__c</fullName>
        <formula>IF( Potential_Amount__c &gt; YTD_Sales_Diff__c , Potential_Amount__c, YTD_Sales_Diff__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adj Incr Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adoption_Metric1__c</fullName>
        <formula>IF(Est_Spend__c&gt;0, 
IF(Org_WCW_Count_Rep__c&gt;0,1,0),0)</formula>
        <label>Adoption Metric1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alibaba_Qualification_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to assign Rep who will be assigned to qualify the Account as a potential Alibaba customer.</description>
        <inlineHelpText>Rep assigned to qualify Account as potential Alibaba customer</inlineHelpText>
        <label>Alibaba Qualification Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignRulesSICLookup__c</fullName>
        <formula>IF(Industry_OD_SIC_DB__c = &quot;Government&quot;, &quot;GV&quot;,
IF(ISPICKVAL(Industry_OD_SIC_Rep__c, &quot;Government&quot;), &quot;GV&quot;, 
IF(Industry_OD_SIC_DB__c = &quot;Education/Schools&quot;, &quot;ES&quot;,
IF(ISPICKVAL(Industry_OD_SIC_Rep__c, &quot;Education/Schools&quot;), &quot;ES&quot;, &quot;&quot;
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignRulesSICLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignRulesWCWLookup__c</fullName>
        <formula>IF(NOT(ISBLANK(Org_WCW_Count_Rep__c)),
IF(Org_WCW_Count_Rep__c &lt; 20, &quot;1to19&quot;,
IF(Org_WCW_Count_Rep__c &gt; 19 &amp;&amp; (Industry_OD_SIC_Rep_Code__c = &apos;ES&apos; || Industry_OD_SIC_Rep_Code__c = &apos;GV&apos;), &quot;20to999999&quot;,
IF(Org_WCW_Count_Rep__c &gt; 19 &amp;&amp; Org_WCW_Count_Rep__c &lt; 50, &quot;20to49&quot;,
IF(Org_WCW_Count_Rep__c &gt; 49 &amp;&amp; Org_WCW_Count_Rep__c &lt; 100, &quot;50to99&quot;,
IF(Org_WCW_Count_Rep__c &gt; 99 &amp;&amp; Org_WCW_Count_Rep__c &lt; 150, &quot;100to149&quot;,
IF(Org_WCW_Count_Rep__c &gt; 149 &amp;&amp; Org_WCW_Count_Rep__c &lt; 200, &quot;150to199&quot;,
IF(Org_WCW_Count_Rep__c &gt; 199 &amp;&amp; Org_WCW_Count_Rep__c &lt; 250, &quot;200to249&quot;,
IF(Org_WCW_Count_Rep__c &gt; 249 &amp;&amp; Org_WCW_Count_Rep__c &lt; 500, &quot;250to500&quot;,
IF(Org_WCW_Count_Rep__c &gt; 499, &quot;500to999999&quot;,
IF(Org_WCW_Count_DB__c &lt; 20, &quot;1to19&quot;,
IF(Org_WCW_Count_DB__c &gt; 19 &amp;&amp; (Industry_OD_SIC_DB__c = &apos;ES&apos; || Industry_OD_SIC_DB__c = &apos;GV&apos;), &quot;20to999999&quot;,
IF(Org_WCW_Count_DB__c &gt; 19 &amp;&amp; Org_WCW_Count_DB__c &lt; 50, &quot;20to49&quot;,
IF(Org_WCW_Count_DB__c &gt; 49 &amp;&amp; Org_WCW_Count_DB__c &lt; 100, &quot;50to99&quot;,
IF(Org_WCW_Count_DB__c &gt; 99 &amp;&amp; Org_WCW_Count_DB__c &lt; 150, &quot;100to149&quot;,
IF(Org_WCW_Count_DB__c &gt; 149 &amp;&amp; Org_WCW_Count_DB__c &lt; 200, &quot;150to199&quot;,
IF(Org_WCW_Count_DB__c &gt; 199 &amp;&amp; Org_WCW_Count_DB__c &lt; 250, &quot;200to249&quot;,
IF(Org_WCW_Count_DB__c &gt; 249 &amp;&amp; Org_WCW_Count_DB__c &lt; 500, &quot;250to500&quot;,
IF(Org_WCW_Count_DB__c &gt; 499, &quot;500to999999&quot;,
&quot;Broke&quot;)))))))))))))))))),&quot;&quot;)</formula>
        <label>AssignRulesWCWLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_Specific_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign Specific Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for Prospect Reassignment</description>
        <label>Assignment Status</label>
        <referenceTo>Reassignment_Queue__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSD_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Pro - To reference a BSD Account</description>
        <label>BSD Account Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (BSD Account Number)</relationshipLabel>
        <relationshipName>AccountBSD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BizBox_Email__c</fullName>
        <externalId>true</externalId>
        <label>BizBox Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Usage_Type__c</fullName>
        <label>Business Usage Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the customer/shipto has bought in the last 2 years</description>
        <label>Buying Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <label>Belongs To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Groups Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Standalone Small &lt; $10K</fullName>
                </value>
                <value>
                    <fullName>Standalone Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standalone Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Standalone Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Standalone K-12</fullName>
                </value>
                <value>
                    <fullName>Standalone Higher-Ed</fullName>
                </value>
                <value>
                    <fullName>Standalone Federal</fullName>
                </value>
                <value>
                    <fullName>Standalone State</fullName>
                </value>
                <value>
                    <fullName>Standalone Local</fullName>
                </value>
                <value>
                    <fullName>Standalone Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Small &lt; $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small &lt; $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Standalone Small &lt; $10K-$75K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Standalone Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Standalone Enterprise $1M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBS_Calc_Pot__c</fullName>
        <formula>CBS_Pot__c - CBS_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBS Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Diff__c</fullName>
        <formula>CBS_TY__c  -  CBS_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBS Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_LY__c</fullName>
        <label>CBS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_LY_per__c</fullName>
        <formula>If((CBS_LY__c = 0 || CBS_LY__c = null), 0, CBS_IMU_LY__c / CBS_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBS IMU LY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_TY__c</fullName>
        <label>CBS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_TY_per__c</fullName>
        <formula>If((CBS_TY__c = 0 || CBS_TY__c = null), 0, CBS_IMU_TY__c / CBS_TY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBS IMU TY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBS_LY__c</fullName>
        <description>CBS YTD Sales Last Year</description>
        <inlineHelpText>CBS YTD Sales Last Year</inlineHelpText>
        <label>CBS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Last_Order__c</fullName>
        <label>CBS Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBS_Last_order_amt__c</fullName>
        <label>CBS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Pot__c</fullName>
        <description>CBS Potential</description>
        <inlineHelpText>CBS Potential</inlineHelpText>
        <label>CBS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_TY__c</fullName>
        <description>CBS Sales This Year</description>
        <inlineHelpText>CBS Sales This Year</inlineHelpText>
        <label>CBS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Total_LY__c</fullName>
        <label>CBS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CONTRACT_RETAIL_CUST_CODE__c</fullName>
        <label>Contract Or Retail Customer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Calc_Pot__c</fullName>
        <formula>CPD_Pot__c  -  CPD_TY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPD Calc Pot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Diff__c</fullName>
        <formula>CPD_TY__c  -  CPD_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPD Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_LY__c</fullName>
        <label>CPD IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_LY_per__c</fullName>
        <formula>If((CPD_LY__c = 0 || CPD_LY__c = null), 0, CPD_IMU_LY__c / CPD_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPD IMU LY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_TY__c</fullName>
        <label>CPD IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_TY_per__c</fullName>
        <formula>If((CPD_TY__c = 0 || CPD_TY__c = null), 0, CPD_IMU_TY__c/CPD_TY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPD IMU TY %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD_LY__c</fullName>
        <description>CPS YTD Sales Last Year</description>
        <inlineHelpText>CPD YTD Sales Last Year</inlineHelpText>
        <label>CPD LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Last_Order__c</fullName>
        <label>CPD Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPD_Last_order_amt__c</fullName>
        <label>CPD Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Pot__c</fullName>
        <description>DPS Potential</description>
        <inlineHelpText>DPS Potential</inlineHelpText>
        <label>CPD Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_TY__c</fullName>
        <description>DPS Sales This Year</description>
        <inlineHelpText>DPS Sales This Year</inlineHelpText>
        <label>CPD TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Total_LY__c</fullName>
        <label>CPD Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date_Override_Value__c</fullName>
        <description>Frequency at which this customer/site should be contacted.</description>
        <label>Cadence Call Date Override Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overrides the custom configuration for call date frequency</description>
        <label>Cadence Call Date Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date__c</fullName>
        <label>Cadence Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Source_URL__c</fullName>
        <label>Campaign Source URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cellular_Provider__c</fullName>
        <label>Cellular Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Verizon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Account_Manager__c</fullName>
        <formula>Partner_Sub_Agent_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Partner_Sub_Agent_Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Tools_Qual_Survey__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Flag to know if the clicktools qualifying survey has been updated.</description>
        <inlineHelpText>Flag to know if the clicktools qualifying survey has been updated.  This is updated by clicktools and shouldn&amp;apos;t be update by user interaction.</inlineHelpText>
        <label>ClickToolsQualSurvey</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coaching_Acct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship between Account records and Coaching records</description>
        <label>Coaching</label>
        <referenceTo>Coaching__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Postscript__c</fullName>
        <label>Community Postscript</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_DUNS_ID__c</fullName>
        <label>Consolidated DUNS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Dedup_Date__c</fullName>
        <label>Contact Dedup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Initiation_Type__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BSD Salesrep Referral</fullName>
                </value>
                <value>
                    <fullName>Business Pro Initial Contact in Store</fullName>
                </value>
                <value>
                    <fullName>FOS</fullName>
                </value>
                <value>
                    <fullName>Networking Event</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Salesgenie.com</fullName>
                </value>
                <value>
                    <fullName>Store Associate Referral</fullName>
                </value>
                <value>
                    <fullName>Top Customer List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Diff__c</fullName>
        <formula>Contract_Furniture_TY__c - Contract_Furniture_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Furniture Diff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_LY__c</fullName>
        <label>Contract Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_LY_per__c</fullName>
        <formula>If((Contract_Furniture_LY__c = 0 || Contract_Furniture_LY__c = null), 0, Contract_Furniture_IMU_LY__c / Contract_Furniture_LY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Furniture IMU LY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_TY__c</fullName>
        <label>Contract Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_TY_per__c</fullName>
        <formula>If((Contract_Furniture_TY__c = 0 || Contract_Furniture_TY__c = null), 0, Contract_Furniture_IMU_TY__c/Contract_Furniture_TY__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Furniture IMU TY %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_LY__c</fullName>
        <label>Contract Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Last_Order__c</fullName>
        <label>Contract Furniture Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Last_Order_amt__c</fullName>
        <label>Contract Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>